fix: issue with button overlap in conclusion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,9 @@ nav a {
     background-color: #9a9a9a;
     text-decoration: none;
     padding: 16px;
+    display: block;
+    width: 128px;
+    margin: 16px auto 0 auto;
 }
 
 #to-top {
